assets/css/shared.css
/* ... */
  .has-header-image.teal header .nav a {
    background-color: rgba(0, 240, 200, 0.8); /* @teal */
  }
  .has-header-image.green header .nav a {
    background-color: rgba(48, 217, 101, 0.8); /* @green */
  }
  .has-header-image.yellow header .nav a {
    background-color: rgba(255, 214, 13, 0.8); /* @yellow */
  }
  .has-header-image.red header .nav a {
    background-color: rgba(239, 20, 93, 0.8); /* @red */
  }

  /* For the navigation button on small screens. */
  .tangerine header .nav h6 a {
    background-color: rgb(255, 80, 26); /* @tangerine */
  }
  .orange header .nav h6 a {
    background-color: rgb(249, 132, 12); /* @orange */
  }
  .purple header .nav h6 a {
    background-color: rgb(168, 46, 255); /* @purple */
  }
  .blue header .nav h6 a {
    background-color: rgb(0, 157, 255); /* @blue */
  }
  .teal header .nav h6 a {
    background-color: rgb(0, 240, 200); /* @teal */
    color: rgb(41, 53, 56); /* @tin */
  }
  .green header .nav h6 a {
    background-color: rgb(48, 217, 101); /* @green */
  }
  .yellow header .nav h6 a {
    background-color: rgb(255, 214, 13); /* @yellow */
    color: rgb(41, 53, 56); /* @tin */
  }
  .red header .nav h6 a {
    background-color: rgb(239, 20, 93); /* @red */
  }



  /* =Meta Data
  ----------------------------------------------- */

  main .meta h2,
  main.project-details .meta h2 {
    color: inherit;
  }

  .projects .list dt {
    margin-top: 1.5em;
  }

  .projects .list dl,
  .meta {
    font-size: 0.8181818182em; /* 18px / 22px */
    line-height: 1.2222222222; /* 22px / 18px */
  }
  .meta li {
    margin-top: 0.3055555556em; /* (22px / 18px) / 4 */
  }
  .meta li a {
    font-style: inherit;
    text-decoration: inherit;
  }
  .meta li a:hover,
  .meta li a:active,
  .meta li a:focus {
    text-decoration: underline;
  }
  blockquote + .byline,
  .projects .list dt,
  .meta h2,
  .meta h3 {
    /* @small-caps */
    font-family: "Proxima Nova W08", "Helvetica Neue", Helvetica, sans-serif; /* @proxima-nova */
    font-weight: bold;
    font-size: 0.6666666667em; /* 12px / 18px */
    line-height: 1.8333333333; /* 22px / 12px */
    text-transform: uppercase;
    letter-spacing: 0.1em;
  }

  /* SHIM: Don’t let the meta data get too small. */
  @media (max-width: 500px) {
    .featured-project-list li p,
    .projects .list dl,
    .meta {
      font-size: inherit !important;
      line-height: inherit !important;
    }
  }

  .meta {
    margin-top: 1.8333333333em; /* 1.5 / (18px / 22px) */
  }
  .meta h2,
  .meta h3 {
    margin-top: 0;
  }


  .meta h2:before {
    display: none;
  }


  /* =Forms
  ----------------------------------------------- */

  input[type="text"],
  input[type="email"],
  textarea {
    font-family: inherit;
    font-size: inherit;
    width: 15em;
    max-width: 100%;
    padding: 0.1875em 0.5em;
    line-height: 1.5;
    min-height: 1.5em;
    box-sizing: border-box;
    display: inline-block;
    background: white;
    border: 0.0625em solid rgb(192, 204, 208); /* @silver */
  }
  textarea {
    width: 25em;
    height: 10em;
  }
  label > span:first-child {
    font-family: "Proxima Nova W08", "Helvetica Neue", Helvetica, sans-serif; /* @proxima-nova */
    font-size: 0.8181818182em; /* 18px / 22px */
    line-height: 1.2222222222; /* 22px / 18px */
    font-weight: bold;
  }

  /* For the “GOOD Society” page */
  form {
    margin-top: 3em;
  }
  p.note {
    font-size: 0.8181818182em; /* 18px / 22px */
    line-height: 1.2222222222; /* 22px / 18px */
    font-style: italic;
  }

  /* For the “Ask a Question” page */
  h1 + form {
    margin-top: 0;
  }

  form .error {
    color: rgb(239, 20, 93); /* @red */
  }

  .validation-message {
    color: rgb(239, 20, 93); /* @red */
  }

  .error-message {
    padding: 1.5em;
    color: white;
    background-color: rgb(239, 20, 93); /* @red */"
  }
  .error-message h1 {
    font-size: inherit;
    line-height: inherit;
    margin: 0;
  }



  /* =Quote
  ----------------------------------------------- */
  .tangerine .quote {
    color: rgb(255, 80, 26); /* @tangerine */
  }
  .orange .quote {
    color: rgb(249, 132, 12); /* @orange */
  }
  .purple .quote {
    color: rgb(168, 46, 255); /* @purple */
  }
  .blue .quote {
    color: rgb(0, 157, 255); /* @blue */
  }
  .teal .quote {
    color: rgb(0, 207, 172); /* @dark-teal */
  }
  .green .quote {
    color: rgb(48, 217, 101); /* @green */
  }
  .yellow .quote {
    color: rgb(230, 189, 0); /* @dark-yellow */
  }
  .red .quote {
    color: rgb(239, 20, 93); /* @red */
  }

  .quote[style] blockquote,
  .quote[style] blockquote + .byline {
    color: inherit;
  }
  blockquote p {
    font-size: 1.6363636364em; /* 36px / 22px */
    line-height: 1.2222222222; /* 44px / 36px */
    margin-top: 1.2222222222em;
    margin-bottom: 1.2222222222em;
  }
  .quote[style] blockquote + .byline {
    text-align: right;
  }
  .standard .quote[style] {
    margin-left: -1.5em; /* main padding */
    margin-right: -1.5em;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    position: relative;
    color: white;
    padding: 1.5em;
    margin-bottom: -3em;
    max-width: none;
  }
  .quote[style]:before {
    content: "";
    background-color: rgba(0, 0, 0, 0.5);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 0;
  }
  .quote[style] > * {
    position: relative;
    z-index: 1;
  }
  .quote[style] blockquote,
  .quote[style] blockquote + .byline {
    max-width: 38.25em;
    margin-left: auto;
    margin-right: auto;
  }
  .quote[style] .media-kit {
    font-size: 0.8181818182em; /* 18px / 22px */
    line-height: 1.2222222222; /* 22px / 18px */
    max-width: 10em;
  }
  @media (min-width: 70em) {
    .standard .quote[style] {
      margin-left: -4em; /* 88px / 22px */
      margin-right: -4em;
      padding: 4em;
    }
    .standard .quote[style]:last-child {
      margin-bottom: -8em;
    }
  }
/* ... */

